--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <div class="top-header">
           <img src="images/logo/Reservia@3x.png" alt="" />
           <div class="blocknav">
-            <div class="nav-itemblue">
-              <a href="index.html" class="nav-link-active">Hébergement</a>
-            </div>
-            <div class="nav-item">
+          <div class="nav-itemblue">
+              <a href="index.html" class="nav-link-active">Hébergements</a>
+          </div>
+          <div class="nav-item">
               <a href="index.html" class="nav-link-active">Activités</a>
-            </div>
-            <div class="nav-inscription">
+          </div>
+          <div class="nav-inscription">
               <a href="index.html" class="nav-link-active">S'inscrire</a>
-            </div>
+          </div>
           </div>
         </div>
         <div class="trouvez">
@@ -41,22 +41,33 @@
              <span class="rechercher">Rechercher</span>
             </div>
           </div>
-          <h2 class="filters">
-           <span>Filtres</span>
-            <span class="filtersin">
-             <i class="fas fa-money-bill-wave"></i><span class="textfilters">Economies</span>
-            </span>
-            <span class="filtersin">
-             <i class="fas fa-child"></i><span class="textfilters">Familial</span>
-            </span>
-            <span class="filtersin"><i class="fas fa-heart">
-             </i><span class="textfilters">Romantique</span>
-            </span>
-            <span class="filtersin">
-              <i class="fas fa-dog"></i><span class="textfilters">Animaux autorisés</span>
-            </span>
-          </h2>
-          <li class="hbg"><i class="fas fa-info-circle"></i>Plus de 500 hébergments sont disponibles dans cette ville</li>
+          <span>Filtres</span>
+          <div class="filtersin">
+           <i class="fas fa-money-bill-wave"></i>
+           <span class="textfilters">Economies</span>
+          </div>
+          <div class="filtersin">
+            <i class="fas fa-child"></i>
+            <span class="textfilters">Familial</span>
+          </div>
+          <div class="filtersin">
+           <i class="fas fa-heart"></i>
+           <span class="textfilters">Romantique</span>
+          </div>
+          <div class="filtersin">
+            <i class="fas fa-dog"></i>
+            <span class="textfilters">Animaux autorisés</span>
+          </div>
+          <li class="hbg">
+            <div>
+             <i class="far fa-circle">
+               <i class="fas fa-info"></i>
+             </i>
+            </div>
+            <div>
+             Plus de 500 hébergments sont disponibles dans cette ville
+            </div>
+          </li>
         </section>
       </header>
     </div>
